--- a/native/app/src/main/res/values/strings.xml
+++ b/native/app/src/main/res/values/strings.xml
@@ -1,3 +1,29 @@
 <resources>
     <string name="app_name">Food Delivery</string>
+    <string name="success">Success</string>
+    <string name="wrong_data">Client sent wrong data</string>
+    <string name="permission_denied">Client can\'t perform this operation</string>
+    <string name="no_connection">No internet connection</string>
+    <string name="malformed_request">Malformed request</string>
+    <string name="user_not_verified">User not verified</string>
+    <string name="user_token_invalid">User token invalid</string>
+    <string name="user_deleted">User deleted</string>
+    <string name="password_rejected">Password does not meet the requirements</string>
+    <string name="token_expired">Token expired</string>
+    <string name="user_upload_failed">User upload failed</string>
+    <string name="recipe_not_found">Recipe not found</string>
+    <string name="recipe_deleted">Recipe deleted</string>
+    <string name="topic_not_found">Topic not found</string>
+    <string name="topic_deleted">Topic deleted</string>
+    <string name="answer_not_added">Answer not added</string>
+    <string name="comment_not_found">Comment not found</string>
+    <string name="comment_deleted">Comment deleted</string>
+    <string name="post_not_found">Post not found</string>
+    <string name="post_deleted">Post deleted</string>
+    <string name="restart_app">Restart App</string>
+    <string name="post_created">Post created successfully</string>
+    <string name="interrupt">Interrupt</string>
+    <string name="connection_timed_out">Connection timed out</string>
+    <string name="read_timeout">Read timeout</string>
+    <string name="unexpected_error">Unexpected error</string>
 </resources>
